manifests/ingress-resource.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: a-ingress
  namespace: tm-test
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: gopherserv
          servicePort: 80
        path: /testpath
status:
  loadBalancer: {}
